<resources>
    <string name="app_name">easycodeandroidtask</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="work_hours">Office Hours:%s</string>
    <string name="unexpected_error_message">Unexpected error happened!</string>
    <string name="json_error_message">JSON parsing error happened!</string>
    <string name="io_error_message">File reading error happened!</string>
    <string name="pet_icon">Pet icon</string>
    <string name="ok">OK</string>
    <string name="within_working_hours">Thank you for getting in touch with us. We’ll get back to you as soon as possible</string>
    <string name="outside_working_hours">Work hours has ended. Please contact us again on the next work day</string>
    <string name="information">Information</string>
</resources>
